--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             </section>
 
             <section id="about-page">
-
+                <p>Under Development, Please Wait</p>
             </section>
 
             <section id="social-links">
-
+                <p>Under Development, Please Wait</p>
             </section>
         </main>
 
