--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
+
+        <!-- Scripts -->
         <script src="typewrite.js"></script>
+        <script src="vanta.js"></script>
 
         <link rel="icon" href="assets/circle_logo.png" type="image/x-icon" />
 
@@ -13,21 +16,24 @@
         <link href="https://fonts.cdnfonts.com/css/blanka" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/blinker" rel="stylesheet">
                 
+        <!-- VANTA JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+
         <title>Archie Productions Inc.</title>
     </head>
 
     <body>
         <!-- Header of the HTML -->
-        <!-- <header>
+        <header>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
+                    <li><a href="">Social Links</a></li>
                     <li><a href="">Contact Us</a></li>
                 </ul>
             </nav>
-        </header> -->
+        </header>
 
         <!-- Main content of HTML -->
         <main>
