--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <link rel="stylesheet" href="style.css" />
 
         <!-- Scripts -->
-        <script src="typewrite.js"></script>
-        <script src="vanta.js"></script>
+        <script src="script.js"></script>
 
         <link rel="icon" href="assets/circle_logo.png" type="image/x-icon" />
 
